1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>

	* sock.h: Add #include <sys/mman.h>.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* io.c: Add #include <sys/mman.h> for munmap decl.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* pf.c (S_socket_whatis_address): Use mmap instead of vm_allocate.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* io.c (TRASH_IDS): Use munmap instead of vm_deallocate.

1999-03-01  Mark Kettenis  <kettenis@gnu.org>

	* pf.c (S_socket_whatis_address): Implement.  Since we cannot tell
	what our adress is, return an empty string as the file name.

Tue Feb 16 05:52:35 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* io.c (S_io_revoke): New function.  Don't attempt to implement.
  	(Other systems don't even permit non-file revokes.)

1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>

	* io.c (S_io_select): Add braces to silence gcc warning.

1998-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* pflocal.c (main): Fix return type to int, and use return.

Wed Aug 20 14:06:11 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* pflocal.c (main): New args for
	ports_manage_port_operations_multithread.
 	* sserver.c (handle_sock_requests): Likewise.

Mon Oct  7 12:53:24 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* connq.c (connq_listen): Unlock CQ->lock when returning EWOULDBLOCK.

Thu Sep 12 16:43:09 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(pflocal): Omit special dependency.

Tue Jul 23 19:44:29 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* sock.c (sock_create): Remove NEXT_SOCK_ID.

Sat Jul 13 20:20:55 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io.c (S_io_reauthenticate): Repeat sock_create_port and
 	auth_server_authenticate for as long as we get EINTR.

Sun Jul  7 21:30:33 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io.c (S_io_reauthenticate): Don't use unsafe MOVE_SEND in call
 	to auth_server_authenticate.
